--- a/styles/scss-css/package.json
+++ b/styles/scss-css/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "stylelint './**/*.scss' --fix"
+    "lint": "stylelint './**/*.scss' --fix",
+    "build": "node src/scripts/build.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
+    "node-sass": "^8.0.0",
     "prettier": "^2.7.1",
     "stylelint": "^14.15.0",
     "stylelint-config-prettier": "^9.0.4",
