--- a/challenges/flexible-tooltip/package.json
+++ b/challenges/flexible-tooltip/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-ruler-resize",
+  "name": "flexible-tooltip",
   "version": "1.0.0",
-  "description": "Using the ResizeObserver API, synchronize the width of the ruler (the article element) with your component's width state.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,5 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.3.1"
-  },
-  "devDependencies": {}
+  }
 }
